tests/sksl/errors/OpenArray.glsl
### Compilation failed:

error: 2: expected expression, but found '='
    coords.r[ = ( coords.g );
              ^
1 error
